# ftbsite

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: docker-build.yml
locales/: en.json  zh.json
locales/cn/: en.json  zh.json
locales/oth/: en.json  zh.json
src/: app.rs  lib.rs  main.rs  server_fns.rs
src/components/: article_card.rs  captcha.rs  category_select.rs  football_card.rs  footer.rs  markdown_editor.rs  mod.rs  nav.rs  pagination.rs  slide_panel.rs  topic_input.rs  user_intro.rs  user_topics.rs
src/models/: category.rs  football.rs  mod.rs  user.rs
src/pages/: admin.rs  auth.rs  football.rs  footballs.rs  home.rs  mod.rs  users.rs  write.rs
src/server/: analysis_db.rs  auth.rs  captcha.rs  category_db.rs  db.rs  email.rs  football_db.rs  markdown.rs  mod.rs  topic_db.rs  upload.rs  user_db.rs
src/shared/: auth.rs  common.rs  constant.rs  fns.rs  locale.rs  mod.rs
src/utils/: common.rs
style/: main.scss
