[package]
name = "football_site"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos       = { version = "0.8", features = ["nightly"] }
leptos_meta  = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
leptos_i18n  = { version = "0.6" }
serde        = { version = "1", features = ["derive"] }
chrono       = { version = "0.4", optional = true }
# hydrate-only
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen             = { version = "0.2", optional = true }
web-sys                  = { version = "0.3", features = ["File", "FileList", "FileReader"], optional = true }
# ssr-only
axum          = { version = "0.8", optional = true }
leptos_axum   = { version = "0.8", optional = true }
tokio         = { version = "1", features = ["full"], optional = true }
tower-http    = { version = "0.6", features = ["fs"], optional = true }
surrealdb     = { version = "3", optional = true }
jsonwebtoken  = { version = "10", features = ["aws_lc_rs"], optional = true }
aws-lc-rs     = { version = "1", optional = true }
base64        = { version = "0.22", optional = true }
lettre        = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"], optional = true }
dotenvy       = { version = "0.15", optional = true }
pulldown-cmark = { version = "0.13", optional = true }

[build-dependencies]
leptos_i18n_build = { version = "0.6" }

[features]
oth = []
hydrate = [
    "leptos/hydrate",
    "leptos_i18n/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:web-sys",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_i18n/axum",
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:surrealdb",
    "dep:jsonwebtoken",
    "dep:aws-lc-rs",
    "dep:base64",
    "dep:chrono",
    "dep:lettre",
    "dep:dotenvy",
    "dep:pulldown-cmark",
]

[profile.dev]
debug = 0

[profile.release]
lto          = "thin"
codegen-units = 1

[profile.wasm-release]
inherits      = "release"
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"

[package.metadata.leptos]
output-name          = "football_site"
site-root            = "target/site"
site-pkg-dir         = "pkg"
style-file           = "style/main.scss"
assets-dir           = "public"
site-addr            = "127.0.0.1:7600"
reload-port          = 7601
bin-features         = ["ssr"]
bin-default-features = false
lib-features         = ["hydrate"]
lib-default-features = false
lib-profile-release  = "wasm-release"
hash-files = true
